# Xime

./: .gitignore  .gitmodules  AGENTS.md  README.md  build-sherpa-onnx.sh  gradle.properties  settings.gradle.kts
.github/workflows/: build-arm64.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/kingzcheung/xime/clipboard/: ClipboardManagerTest.kt
app/src/androidTest/java/com/kingzcheung/xime/plugin/: ExtensionManagerTest.kt
app/src/androidTest/java/com/kingzcheung/xime/settings/: SettingsPreferencesTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xime.yaml
app/src/main/assets/rime/: default.yaml  handwriting.schema.yaml  pinyin_simp.dict.yaml  pinyin_simp.schema.yaml  symbols.yaml  t9_pinyin.schema.yaml  wubi86.schema.yaml  wubi86_pinyin.schema.yaml
app/src/main/assets/rime/lua/: date_hint.lua  t9_preedit.lua  uuid.lua
app/src/main/java/com/kingzcheung/kime/: KimeApplication.kt
app/src/main/java/com/kingzcheung/kime/plugin/: ExtensionManager.kt
app/src/main/java/com/kingzcheung/kime/service/: KimeInputMethodService.kt
app/src/main/java/com/kingzcheung/kime/settings/: SettingsPreferences.kt
app/src/main/java/com/kingzcheung/kime/speech/: SpeechRecognitionManager.kt
app/src/main/java/com/kingzcheung/kime/ui/: CandidateBar.kt  ClipboardView.kt  EmojiKeyboardLayout.kt  KeyboardLayout.kt  KeyboardResizeOverlay.kt  KeyboardView.kt  MenuBar.kt  PluginsSettingsScreen.kt  SettingsScreen.kt  SymbolKeyboardLayout.kt  VoiceKeyboardLayout.kt
app/src/main/java/com/kingzcheung/kime/ui/theme/: Color.kt
app/src/main/java/com/kingzcheung/xime/: MainActivity.kt  XimeApplication.kt
app/src/main/java/com/kingzcheung/xime/association/: AssociationManager.kt  OnnxAssociationEngine.kt
app/src/main/java/com/kingzcheung/xime/clipboard/: ClipboardManager.kt
app/src/main/java/com/kingzcheung/xime/data/: SymbolData.kt
app/src/main/java/com/kingzcheung/xime/handwriting/: HandwritingEngine.kt  HandwritingNativeEngine.kt  StrokePoint.kt  StrokeRenderer.kt  WubiLookup.kt
app/src/main/java/com/kingzcheung/xime/keyboard/: GestureAction.kt  KeyboardDimensions.kt  KeyboardMode.kt  KeyboardPage.kt  KeyboardRoute.kt  Keycode.kt  ToolbarButton.kt
app/src/main/java/com/kingzcheung/xime/model/: ModelDownloader.kt  ModelIndexLoader.kt  ModelInfo.kt  ModelManager.kt  ModelRuntime.kt  Models.kt
app/src/main/java/com/kingzcheung/xime/plugin/: ExtensionManager.kt
app/src/main/java/com/kingzcheung/xime/rime/: FuzzyPinyin.kt  PinyinBigramLM.kt  RimeConfigHelper.kt  RimeEngine.kt  SyllableGraph.kt  T9Decoder.kt  T9InputController.kt  T9PinyinEngine.kt  T9PinyinMap.kt
app/src/main/java/com/kingzcheung/xime/service/: CandidateState.kt  InputUIState.kt  VoiceKeyboardContainer.kt  VoiceRecognitionHandler.kt  XimeInputMethodService.kt
app/src/main/java/com/kingzcheung/xime/settings/: KeysConfigHelper.kt  PersonalDictManager.kt  SchemaConfigHelper.kt  SchemaInfo.kt  SchemaLayoutHelper.kt  SchemaManager.kt  SettingsPreferences.kt  WebDavSyncHelper.kt  WirelessImportHelper.kt  XimeIndexModels.kt  XimeIndexParser.kt  XimeIndexSource.kt
app/src/main/java/com/kingzcheung/xime/speech/: SpeechRecognitionManager.kt  TranscriptionManager.kt
app/src/main/java/com/kingzcheung/xime/speech/punctuation/: PunctuationInference.kt
app/src/main/java/com/kingzcheung/xime/speech/sherpa/: SherpaAsrEngine.kt
app/src/main/java/com/kingzcheung/xime/ui/: AboutScreen.kt  CandidateBar.kt  CandidatePage.kt  ClipboardView.kt  EmojiKeyboardLayout.kt  KeyButton.kt  KeyboardLayout.kt  KeyboardMode.kt  KeyboardResizeOverlay.kt  KeyboardView.kt  MenuBar.kt  NineKeyKeyboardLayout.kt  NumberKeyboardLayout.kt  SchemaListView.kt  SettingsComponents.kt  SettingsScreen.kt  SwipeBubble.kt  ToolbarButton.kt  ToolbarCustomizeView.kt
app/src/main/java/com/kingzcheung/xime/util/: FileLogger.kt  PreeditMergeHelper.kt
app/src/main/java/com/kingzcheung/xime/viewmodel/: CustomPhraseViewModel.kt  DictionarySettingsViewModel.kt  KeyboardViewModel.kt  LogViewerViewModel.kt  ModelManagementViewModel.kt  SchemaMarketViewModel.kt  SchemaSettingsViewModel.kt  SmartPredictionSettingsViewModel.kt  ThemeSettingsViewModel.kt
app/src/main/jni/: CMakeLists.txt  handwriting_jni.cc  onnx_jni.cc
app/src/main/jni/cmake/: Rime.cmake
app/src/main/jni/librime_jni/: CMakeLists.txt  rime_jni.cc
app/src/main/res/drawable/: t26.xml  t9.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: method.xml
app/src/test/java/com/kingzcheung/kime/: CoroutineTestRule.kt
app/src/test/java/com/kingzcheung/xime/calculator/: CalculatorEngineTest.kt
app/src/test/java/com/kingzcheung/xime/rime/: RimeEngineLuaIntegrationTest.kt  T9DecoderRealDictTest.kt  T9DecoderTest.kt  T9InputControllerTest.kt  T9PinyinMapTest.kt
app/src/test/java/com/kingzcheung/xime/settings/: KeyboardGestureConfigTest.kt  PersonalDictManagerTest.kt  SchemaYamlParserTest.kt  XimeIndexParserTest.kt
app/src/test/java/com/kingzcheung/xime/ui/: KeyboardModeTest.kt
app/src/test/java/com/kingzcheung/xime/util/: PreeditMergeTest.kt
docs/: features.md  usage.md
docs/.vitepress/: config.mts
docs/config_examples/: xime.cangjie.yaml  xime.custom.yaml  xime.full_example.yaml  xime.shortcut.yaml  xime.theme_example.yaml
docs/features/: deployment.md  input-scheme.md  keyboard-adjustment.md  smart-prediction.md  webdav-sync.md
docs/plugins/: index.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
plugin-core/: build.gradle.kts
plugin-core/src/main/: AndroidManifest.xml
plugins/emoji-sticker/: build.gradle.kts  proguard-rules.pro
plugins/emoji-sticker/src/main/: AndroidManifest.xml
plugins/funasr-speech/: build.gradle.kts  proguard-rules.pro
plugins/funasr-speech/src/main/: AndroidManifest.xml
plugins/kaomoji/: build.gradle.kts  proguard-rules.pro
plugins/kaomoji/src/main/: AndroidManifest.xml
plugins/prediction-onnx/: build.gradle.kts  proguard-rules.pro
plugins/prediction-onnx/src/main/: AndroidManifest.xml
scripts/: build_pinyin_lm.py
(+81 files in other folders)
